# city-running-python

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/city_running.egg-info/: PKG-INFO  SOURCES.txt
src/crunner/: color.py  common.py  create.py  delete.py  explore.py  explore2.py  fix_gpx.py  garmin.py  gpx.py  gpx2.py  graph.py  handler.py  main.py  osm.py  path.py  plotter.py  plotter2.py  rename.py  route.py  street.py  strides.py  util.py
src/crunner/editor/: __init__.py
src/crunner/editor/command/: __init__.py  add_edge.py  add_edges.py  add_node.py  add_nodes.py  change_graph.py  extend_graph.py  find_circuit.py  remove_toggled.py  save_graph.py  set_distances.py  show_by_name.py  split_graph.py  toggle_elem.py  toggle_elem2.py  toggle_highlighted.py  toggle_removed.py  toggle_type.py
src/crunner/editor/popup/: latlng.py
src/crunner/excel/: header.py  main.py
src/crunner/excel/updaters/: __init__.py  circuit.py  plotted.py  runs.py  streets.py
src/crunner/scripts/: Untitled.ipynb
