[metadata]
name = city-running
description = Scripts for trying to run every street in my cities
author = Eertze van de Riet
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.packages.find]
where =src
